Advances in stochastic simulation proyect proposal.

--- a/stochastic-simulation/proyect/proposal/doc/proposal.bib
+++ b/stochastic-simulation/proyect/proposal/doc/proposal.bib
@@ -4,3 +4,41 @@
 	year={2014},
 	publisher={Academic press}
 }
+
+@book{jones2009introduction,
+	title={Introduction to scientific programming and simulation using R},
+	author={Jones, Owen and Maillardet, Robert and Robinson, Andrew},
+	year={2009},
+	publisher={Chapman and Hall/CRC}
+}
+
+@article{mcgarry1994stochastic,
+	title={A stochastic approach to predicting competition squash match-play},
+	author={McGarry, Tim and Franks, Ian M},
+	journal={Journal of sports sciences},
+	volume={12},
+	number={6},
+	pages={573--584},
+	year={1994},
+	publisher={Taylor \& Francis}
+}
+
+@article{wenninger2016performance,
+	title={Performance analysis in table tennis-stochastic simulation by numerical derivation},
+	author={Wenninger, Sebastian and Lames, Martin},
+	journal={Journal homepage: http://iacss. org/index. php? id},
+	volume={15},
+	number={1},
+	year={2016}
+}
+
+@article{min2008compound,
+	title={A compound framework for sports results prediction: A football case study},
+	author={Min, Byungho and Kim, Jinhyuck and Choe, Chongyoun and Eom, Hyeonsang and McKay, RI Bob},
+	journal={Knowledge-Based Systems},
+	volume={21},
+	number={7},
+	pages={551--562},
+	year={2008},
+	publisher={Elsevier}
+}
